--- a/sass/old_stuff/_pricetabs.scss
+++ b/sass/old_stuff/_pricetabs.scss
@@ -118,7 +118,7 @@ $tableColour: slategrey;
 
 /* Tab Styling
 ==================================== */
-$tabColour: $color_gruen_logo;
+$tabColour: $color_mnc_gruen;
 
 .Tablist {
   display: flex;
