--- a/sass/_mi_mixins.scss
+++ b/sass/_mi_mixins.scss
@@ -157,48 +157,29 @@
   }
 }
 
-
-$screen-lg-min: 1200px;
-$screen-md-min: 1024px;
-$screen-md-max: $screen-lg-min - 1;
-$screen-sm-min: 768px;
-$screen-sm-max: 991px;
-
-$screen-xs-max: $screen-sm-min - 1;
-
-@mixin bp($point) {
-  @if $point == desktop {
-    @media (min-width: $screen-lg-min) {
-      @content;
-    }
-  } @else if $point == laptop {
-    @media (min-width: $screen-md-min) and (max-width: $screen-md-max) {
-      @content;
-    }
-  } @else if $point == tablet {
-    @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
-      @content;
-    }
-  } @else if $point == mobile {
-    @media (max-width: $screen-xs-max) {
-      @content;
-    }
-  } @else if $point == larger_mobile {
-    @media (min-width: $screen-sm-min) {
-      @content;
-    }
-  } @else if $point == larger_tablet {
-    @media (min-width: $screen-md-min) {
-      @content;
-    }
-  } @else if $point == smaller_desktop {
-    @media (max-width: $screen-md-max) {
-      @content;
-    }
-  } @else if $point == smaller_laptop {
-    @media (max-width: $screen-sm-max) {
-      @content;
-    }
+@mixin skip_main() {
+  left:-999px;
+  position:absolute;
+  top:auto;
+  width:1px;
+  height:1px;
+  overflow:hidden;
+  z-index:-999;
+  &:focus, &:active {
+    color: #000;
+    background-color:#FFF;
+    left: auto;
+    top: auto;
+    width: 30%;
+    height: auto;
+    overflow:auto;
+    margin: 10px 35%;
+    padding:5px;
+    border-radius: 15px;
+    border:3px solid red;
+    text-align:center;
+    font-size:1.2em;
+    z-index:999;
   }
 }
 
