--- a/style.css
+++ b/style.css
@@ -333,6 +333,14 @@ input[type=email], input[type=number], input[type=password], input[type=reset], 
 .mnc-form-anfrage label {
   font-size: 1rem;
 }
+.mnc-form-anfrage div[aria-hidden=true] {
+  display: none;
+  visibility: hidden;
+}
+.mnc-form-anfrage div[aria-hidden=true] * {
+  display: none;
+  visibility: hidden;
+}
 .mnc-form-anfrage input[type=text], .mnc-form-anfrage input[type=email], .mnc-form-anfrage input[type=url] {
   transition: none;
 }
