remove buttons mixin

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,7 +28,7 @@ Template: astra
 @import "customizer_css";
 @import "bb_tweaks";
 @import "newsletter_form";
-@import "buttons";
+//@import "buttons";
 @import "anfrage";
 @import "slider";
 
