--- a/sass/_mi_variables.scss
+++ b/sass/_mi_variables.scss
@@ -1,13 +1,15 @@
 
 
 $color_mnc_gruen: #87a133;
-$color_mnc_gruenheller: #a8be5d;
+$color_mnc_gruen_hover: #a8be5d;
+
+$color_mnc_hellblau:#A6D0CB;
+$color_mnc_hellblau_hover:#94c7c1;
 
 $color_mnc_blau: #0e2c40;
 $color_mnc_blauheller: #133b59;
 
 
-$color_mnc_hellblau:#D1E7E5;
 $color_mnc_infoblau: #427adc;
 
 $color_mnc_bg_blau: rgba(14,44,64, 0.9);
