--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,7 +28,7 @@ Template: astra
 @import "customizer_css";
 @import "bb_tweaks";
 @import "newsletter_form";
-//@import "buttons";
+@import "buttons";
 @import "anfrage";
 @import "slider";
 
@@ -78,6 +78,14 @@ a.skip-main {
   }
   input[type="text"],input[type="email"],input[type="password"] {
     color:var(--color-mnc-text);
+  }
+}
+
+.mnc-links-underline {
+  nav a, .fl-list a {
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
