--- a/sass/_mi_mixins.scss
+++ b/sass/_mi_mixins.scss
@@ -22,6 +22,18 @@
   }
 }
 
+@mixin black-link {
+  a {
+    color:var(--color-mnc-text);
+    &[aria-current='page'], &.active {
+      color:var(--color-mnc-gruen)
+    }
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
 @mixin hutgroesse($y) {
   $x: 2.6 * $y;
   height: $y;
@@ -54,16 +66,16 @@
 
 @mixin badge {
   text-decoration: none !important;
-  line-height: 1rem;
-  display: inline-block;
+  line-height: 0 !important;
+  display: block;
+  padding: 10px 6px;
   background-color: var(--color-mnc-gruen);
   color: white;
-  font-weight: 600;
-  font-size: 0.75rem;
+  font-weight: 700;
+  font-size:0.625rem;
   text-transform: uppercase;
-  letter-spacing: 0.05rem;
-  border-radius: 0.5rem;
-  padding: 0.25rem 0.5rem;
+  letter-spacing: 1px;
+  border-radius: 0.25rem;
   &:hover {
     text-decoration: underline !important;
   }
