--- a/sass/_custom_post.scss
+++ b/sass/_custom_post.scss
@@ -11,19 +11,192 @@
 
 .fl-post-feed-post.fl-post-feed-image-beside, .fl-post-feed-post.fl-post-feed-image-beside-content, .fl-post-feed-post.fl-post-feed-image-beside-right, .fl-post-feed-post.fl-post-feed-image-beside-content-right {
   @include mobile {
-    max-width:initial;
+    max-width: initial;
   }
 }
 
 .mnc-terms {
   a {
-    color:var(--color-mnc-text);
+    color: var(--color-mnc-text);
+
     &:hover {
-      color:var(--color-mnc-gruen);
+      color: var(--color-mnc-gruen);
       text-decoration: underline;
     }
   }
+
   margin-bottom: 0.5rem;
 }
 
+
+.mnc-post-image {
+  grid-area: postimg;
+}
+
+.mnc-post-terms {
+  grid-area: postterms;
+}
+
+.mnc-post-title {
+  grid-area: posttitle;
+}
+
+.mnc-post-excerpt {
+  grid-area: postexcerpt;
+}
+
+.mnc-custom-post {
+
+  margin-top: 1.5rem;
+  display: grid;
+  grid-template-columns: 220px 3fr;
+  grid-template-areas:
+      "postimg postterms"
+      "postimg posttitle"
+      "postimg postexcerpt";
+  @include mobile {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "postterms"
+      "posttitle"
+      "postimg"
+      "postexcerpt";
+  }
+
+  .mnc-post-image {
+    overflow: hidden;
+    padding-right: 1rem;
+    @include mobile {
+      padding-top: 0.5rem;
+    }
+
+    img {
+      border-radius: 0.25rem;
+      object-fit: cover;
+      min-height: 140px;
+    }
+  }
+
+  .mnc-post-terms {
+    // display: flex;
+    // gap: 0.5rem;
+
+    a {
+      @include badge;
+      float: left;
+      margin-right: 0.5rem;
+    }
+  }
+
+  .mnc-post-title {
+    a, h3 {
+      text-decoration: none !important;
+      color: var(--color-mnc-text);
+
+      &:hover {
+        color: var(--color-mnc-gruen);
+        text-decoration: underline !important;
+      }
+    }
+
+    h3 {
+      margin-top: 0.25rem;
+      font-size: 1.25rem;
+      line-height: 1.2rem;
+    }
+  }
+
+  .more {
+    font-weight: 600;
+    display: inline;
+    margin-left: 0.75rem;
+  }
+
+  .mnc-post-excerpt {
+    @include mobile {
+      margin-bottom: 1rem;
+    }
+    color: black;
+    margin-top: 0.75rem;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 1.2rem;
+  }
+
+}
+
+
+// Grid Display for Rezepte
+
+.mnc-list-grid .fl-post-feed {
+
+  --item-height: 250px;
+  --img-height: 190px;
+  --title-height: 60px;
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(var(--item-height), 1fr));
+  @include mobile {
+    grid-template-columns: repeat(auto-fill, 1fr);
+  }
+  grid-gap: 2rem;
+  object-fit: cover;
+
+  .fl-post-feed-post {
+    display: flex;
+
+    & > a {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      text-decoration: none !important;
+    }
+  }
+
+  .mnc-item-grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: var(--img-height) auto;
+
+    figure {
+      border-radius: 1rem;
+      background-color: white;
+      overflow: hidden;
+    }
+
+    img {
+      background-color: grey;
+      height: 100%;
+      transition: all 300ms ease-in;
+      object-fit: cover;
+    }
+
+    h3 {
+      text-decoration: none !important;
+      color: var(--color-mnc-text);
+      line-height: 1.2rem;
+      margin: 0 auto;
+      display: inline-block;
+      padding: 0.5rem;
+      font-size: 1.1rem;
+      text-align: center;
+    }
+
+    &:hover {
+      h3 {
+        text-decoration: underline !important;
+      }
+
+      img {
+        transform: scale(1.15);
+      }
+    }
+  }
+
+}
+
+.mnc-list-categories {
+  @include no-list;
+  @include black-link;
+}
 
