--- a/sass/style.scss
+++ b/sass/style.scss
@@ -38,6 +38,7 @@ Template: astra
 
 // Blog Roll:
 @import "custom_post";
+@import "custom_post_referenz";
 //@import "mnc_post_item_list";
 //@import "mnc_list_weitere_stories";
 //@import "mnc_terms_categories";
